# pim-tomato-app

./: .gitignore  RIPRENDI.md  Ripara PIM Tomato.scpt  package-lock.json  package.json
build-tools/: app-promote.sh  app-release.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  timer.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
