[package]
name = "pim-tomato-app"
version = "0.2.10"
description = "PIM Tomato"
authors = ["Progetto Immagina"]
edition = "2021"

[lib]
name = "pim_tomato_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
